fixed animated background not showing on menu

--- a/styles/partials/_homePage.scss
+++ b/styles/partials/_homePage.scss
@@ -118,3 +118,7 @@
   left: 0;
   z-index: -10;
 }
+
+@keyframes mouserScroll {
+  
+}
